welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:5: error: type mismatch;
 found   : Unit
 required: Boolean
    c=true
     ^in3050:9: error: type mismatch;
 found   : Unit
 required: Boolean
    c= true
     ^in3050:11: error: type mismatch;
 found   : Unit
 required: Boolean
    c=false
     ^